// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description="Upload results to Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - Upload Results"
    url="https://munro-leagues.herokuapp.com/upload"
  />
   
  <h1
    class="mb-2 text-3xl font-normal text-main font-heading"
  >
    
    Upload Results
  
  </h1>
   
  <div
    class="mt-2 mb-4 card-color"
  >
    <p>
      
      For instructions on how to upload results please visit
      
      <router-link-stub
        class="inline ml-1 text-white link"
        to="/upload-instructions"
      >
        
        /upload-instructions
      
      </router-link-stub>
    </p>
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Event ID:
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="text"
    />
  </div>
   
  <p
    class="mb-3"
    style="display: none;"
  >
    <b>
      Event Name:
    </b>
    
    
  
  </p>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Upload Key:
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="text"
    />
  </div>
   
  <!---->
   
  <div
    class="relative file-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Results File:
    </label>
     
    <p
      class="w-full px-4 py-2 truncate border outline-none border-main rounded-shape text-body"
    >
      
    Select a File
    
      <label
        class="absolute right-0 inline-block px-4 py-2 text-white border-l border-r border-main rounded-shape bg-main hover:text-main hover:bg-white mt--2 font-heading"
        for="file"
      >
        Browse for File
      </label>
       
      <input
        accept=".csv"
        class="hidden"
        id="file"
        type="file"
      />
    </p>
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Results (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Routegadget (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Winsplits: (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <!---->
</div>
`;

exports[`Upload Buttons Shows Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description="Upload results to Munro, the Fast and Easy Results System for Orienteering Leagues. A simple way to calculate the results for orienteering leagues, with search and sort features"
    head="[object Object]"
    title="Munro - Upload Results"
    url="https://munro-leagues.herokuapp.com/upload"
  />
   
  <h1
    class="mb-2 text-3xl font-normal text-main font-heading"
  >
    
    Upload Results
  
  </h1>
   
  <div
    class="mt-2 mb-4 card-color"
  >
    <p>
      
      For instructions on how to upload results please visit
      
      <router-link-stub
        class="inline ml-1 text-white link"
        to="/upload-instructions"
      >
        
        /upload-instructions
      
      </router-link-stub>
    </p>
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Event ID:
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="text"
    />
  </div>
   
  <p
    class="mb-3"
    style="display: none;"
  >
    <b>
      Event Name:
    </b>
    
    
  
  </p>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Upload Key:
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="text"
    />
  </div>
   
  <!---->
   
  <div
    class="relative file-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Results File:
    </label>
     
    <p
      class="w-full px-4 py-2 truncate border outline-none border-main rounded-shape text-body"
    >
      
    Select a File
    
      <label
        class="absolute right-0 inline-block px-4 py-2 text-white border-l border-r border-main rounded-shape bg-main hover:text-main hover:bg-white mt--2 font-heading"
        for="file"
      >
        Browse for File
      </label>
       
      <input
        accept=".csv"
        class="hidden"
        id="file"
        type="file"
      />
    </p>
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Results (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Routegadget (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <div
    class="relative text-input top--4"
  >
    <label
      class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
    >
      Winsplits: (URL):
    </label>
     
    <input
      class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
      type="url"
    />
  </div>
   
  <button
    class="button-lg"
  >
    
    Upload File
  
  </button>
</div>
`;
